--- a/home/templates/home/home.html
+++ b/home/templates/home/home.html
@@ -1,6 +1,33 @@
 {% extends "base.html" %}
+{% load widget_tweaks %}
 
 {% block content %}
-    <h1>Hello world</h1>
+    <div class="row">
+
+        <div class="col-sm-12 col-md-3 col-md-push-9">
+            {% if not user.is_authenticated %}
+                <form method="post" action="{% url 'login' %}">
+                    {% csrf_token %}
+                    <div class="form-group">
+                        {{ auth_form.username.label_tag }}
+                        {{ auth_form.username|add_class:"form-control" }}
+                    </div>
+                    <div class="form-group">
+                        {{ auth_form.password.label_tag }}
+                        {{ auth_form.password|add_class:"form-control" }}
+                    </div>
+                    <input type="hidden" name="next" value="{% url "home" %}" />
+                    <button type="submit" class="btn btn-default">Oturum Aç</button>
+                </form>
+            {% endif %}
+        </div>
+
+
+
+        <div class="col-sm-12 col-md-9 col-md-pull-3">
+            <h1>Hello world</h1>
+            <p>{% lorem %}</p>
+        </div>
+    </div>
 
 {% endblock %}
