--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -3,30 +3,34 @@
 
 {% block content %}
 
-{% if form.errors %}
-<p>Kullanıcı adı ve parola eşleşmedi.</p>
-{% endif %}
+<div class="col-sm-12 col-md-4 col-md-push-4">
 
-{% if next %}
-    {% if user.is_authenticated %}
-    <p>Bu sayfayı görmeye (veya bu işlemi yapmaya) yetkiniz yok. Yetkisi olan bir kullanıcı oturum açabilir.</p>
-    {% else %}
-    <p>Bu sayfayı görebilmek için lütfen oturum açın</p>
+    {% if form.errors %}
+    <p>Kullanıcı adı ve parola eşleşmedi.</p>
     {% endif %}
-{% endif %}
 
-    <form method="post" action="{% url 'login' %}">
-        {% csrf_token %}
-        <div class="form-group">
-            {{ form.username.label_tag }}
-            {{ form.username|add_class:"form-control" }}
-        </div>
-        <div class="form-group">
-            {{ form.password.label_tag }}
-            {{ form.password|add_class:"form-control" }}
-        </div>
-        <input type="hidden" name="next" value="{{ next }}" />
-        <button type="submit" class="btn btn-default">Oturum Aç</button>
-    </form>
+    {% if next %}
+        {% if user.is_authenticated %}
+        <p>Bu sayfayı görmeye (veya bu işlemi yapmaya) yetkiniz yok. Yetkisi olan bir kullanıcı oturum açabilir.</p>
+        {% else %}
+        <p>Bu sayfayı görebilmek için lütfen oturum açın</p>
+        {% endif %}
+    {% endif %}
+
+        <form method="post" action="{% url 'login' %}">
+            {% csrf_token %}
+            <div class="form-group">
+                {{ form.username.label_tag }}
+                {{ form.username|add_class:"form-control" }}
+            </div>
+            <div class="form-group">
+                {{ form.password.label_tag }}
+                {{ form.password|add_class:"form-control" }}
+            </div>
+            <input type="hidden" name="next" value="{{ next }}" />
+            <button type="submit" class="btn btn-default">Oturum Aç</button>
+        </form>
+
+</div>
 
 {% endblock %}
