--- a/templates/registration/password_change_form.html
+++ b/templates/registration/password_change_form.html
@@ -3,17 +3,19 @@
 
 {% block content %}
 
-{% if form.errors %}
-<p>Kul</p>
-{% endif %}
+<div class="col-sm-12 col-md-4 col-md-push-4">
 
-{% if next %}
-    {% if user.is_authenticated %}
-    <p>Bu sayfayı görmeye (veya bu işlemi yapmaya) yetkiniz yok. Yetkisi olan bir kullanıcı oturum açabilir.</p>
-    {% else %}
-    <p>Lütfen bu sayfayı görebilmek için oturum açın</p>
+    {% if form.errors %}
+        <p>Bir şeyler yanlış. Doğru şifreyi girdiğinizden emin misiniz? Ya da yeni şifreyi iki defa doğru girdiğinizden?</p>
     {% endif %}
-{% endif %}
+
+    {% if next %}
+        {% if user.is_authenticated %}
+        <p>Bu sayfayı görmeye (veya bu işlemi yapmaya) yetkiniz yok. Yetkisi olan bir kullanıcı oturum açabilir.</p>
+        {% else %}
+        <p>Lütfen bu sayfayı görebilmek için oturum açın</p>
+        {% endif %}
+    {% endif %}
 
     <form method="post" action="{% url 'changePassword' %}">
         {% csrf_token %}
@@ -31,5 +33,7 @@
         </div>
         <button type="submit" class="btn btn-default">Değiştir</button>
     </form>
+
+</div>
 
 {% endblock %}
