--- a/hasta/templates/hasta/edit_hasta.html
+++ b/hasta/templates/hasta/edit_hasta.html
@@ -2,6 +2,13 @@
 {% load crispy_forms_tags %}
 
 {% block content %}
+    {%  if form.errors %}
+        <div class="alert alert-danger alert-dismissible" role="alert">
+            <p>Form alanlarındaki hataları düzeltin</p>
+            {{ form.errors }}
+        </div>
+
+    {% endif %}
 
     <form action="" method="post">{% csrf_token %}
         {% crispy form %}
