--- a/home/templates/home/home.html
+++ b/home/templates/home/home.html
@@ -25,7 +25,7 @@
 
 
         <div class="col-sm-12 col-md-9 col-md-pull-3">
-            <h1>Hello world</h1>
+            <h1>Hepatit ilişkili enfeksiyonlar</h1>
             <p>{% lorem %}</p>
         </div>
     </div>
