--- a/home/templates/home/home.html
+++ b/home/templates/home/home.html
@@ -1,32 +1,39 @@
 {% extends "base.html" %}
 {% load widget_tweaks %}
+{% load staticfiles %}
 
 {% block content %}
     <div class="row">
 
         <div class="col-sm-12 col-md-3 col-md-push-9">
-            {% if not user.is_authenticated %}
-                <form method="post" action="{% url 'login' %}">
-                    {% csrf_token %}
-                    <div class="form-group">
-                        {{ auth_form.username.label_tag }}
-                        {{ auth_form.username|add_class:"form-control" }}
-                    </div>
-                    <div class="form-group">
-                        {{ auth_form.password.label_tag }}
-                        {{ auth_form.password|add_class:"form-control" }}
-                    </div>
-                    <input type="hidden" name="next" value="{% url "home" %}" />
-                    <button type="submit" class="btn btn-default">Oturum Aç</button>
-                </form>
-            {% endif %}
+        {% if not user.is_authenticated %}
+            <div class="panel panel-default">
+              <div class="panel-heading">Lütfen oturum açın</div>
+                <div class="panel-body">
+                    <form method="post" action="{% url 'login' %}">
+                        {% csrf_token %}
+                        <div class="form-group">
+                            {{ auth_form.username.label_tag }}
+                            {{ auth_form.username|add_class:"form-control" }}
+                        </div>
+                        <div class="form-group">
+                            {{ auth_form.password.label_tag }}
+                            {{ auth_form.password|add_class:"form-control" }}
+                        </div>
+                        <input type="hidden" name="next" value="{% url "home" %}" />
+                        <button type="submit" class="btn btn-default">Oturum Aç</button>
+                    </form>
+                </div>
+            </div>
+        {% endif %}
         </div>
 
 
 
         <div class="col-sm-12 col-md-9 col-md-pull-3">
-            <h1>Hepatit ilişkili enfeksiyonlar</h1>
-            <p>{% lorem %}</p>
+            <img src="{% static 'bayrak01.png' %}" class="img-responsive center-block" alt="Responsive image">
+            <h1 class="text-center">TR-HİES</h1>
+            <h2 class="text-center">TÜRKİYE’DE HEMODİYALİZ İLİŞKİLİ ENFEKSİYONLARIN SÜRVEYANSI</h2>
         </div>
     </div>
 
