--- a/static/theme.css
+++ b/static/theme.css
@@ -1,6 +1,8 @@
 body {
   padding-top: 70px;
   padding-bottom: 30px;
+  padding-left: 10px;
+  padding-right: 10px;
 }
 
 .theme-dropdown .dropdown-menu {
@@ -16,3 +18,4 @@ body {
 .theme-showcase .navbar .container {
   width: auto;
 }
+
