--- a/templates/base.html
+++ b/templates/base.html
@@ -45,11 +45,14 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="{% url 'home' %}">TR-HIES</a>
+          <a class="navbar-brand" href="{% url 'home' %}">TR-HİES</a>
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            <li><a href="{% url 'hasta_list' %}">Hasta listesi</a></li>
+              {% if user.is_authenticated %}
+                <li><a href="{% url 'hasta_list' %}">Hasta listesi</a></li>
+              {% endif %}
+              <li><a href="{% url 'contact' %}">İletişim</a></li>
           </ul>
           <ul class="nav navbar-nav navbar-right">
             {% if request.user.is_authenticated %}
@@ -72,7 +75,10 @@
         {% block content %}
         
         {% endblock %}
+
+
     </div><!-- /.container -->
+
 
 
     <!-- Bootstrap core JavaScript
