--- a/home/templates/home/contact.html
+++ b/home/templates/home/contact.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% block content %}
 
-<h3>Lütfen <a href="mailto:info@tr-hies.org">info@tr-hies.org</a> adresine e-posta gönderin.</h3>
+<h3>İletişim için Dr. İmran Hasanoğlu <a href="mailto:ihasanoglu@tr-hies.org">ihasanoglu@tr-hies.org</a> adresine e-posta gönderin.</h3>
 
 {% endblock %}
