--- a/templates/base.html
+++ b/templates/base.html
@@ -50,7 +50,19 @@
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
               {% if user.is_authenticated %}
-                <li><a href="{% url 'hasta_list' %}">Hasta listesi</a></li>
+                  <li><a href="{% url 'hasta_list' %}">Hasta listesi</a></li>
+                  <li class="dropdown">
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Formlar<span class="caret"></span></a>
+                    <ul class="dropdown-menu">
+                        <li><a href="{% static 'formlar/hasta-form.pdf' %}">Hasta formu</a></li>
+                        <li><a href="{% static 'formlar/hemodiyaliz-olay.pdf' %}">Hemodiyaliz ilişkili olay formu</a></li>
+                        <li><a href="{% static 'formlar/fistul-kanulasyon.pdf' %}">Fistül kanülasyonu gözlem formu</a></li>
+                        <li><a href="{% static 'formlar/fistul-dekanulasyon.pdf' %}">Fistül dekanülasyonu gözlem formu</a></li>
+                        <li><a href="{% static 'formlar/el-hijyeni.pdf' %}">Hemodiyaliz ünitesinde el hijyeni gözlem formu</a></li>
+                        <li><a href="{% static 'formlar/kateter-pansuman.pdf' %}">Kateter pansumanı gözlem formu</a></li>
+                        <li><a href="{% static 'formlar/kateter-baglama.pdf' %}">Kateteri diyaliz makinasına bağlama formu</a></li>
+                    </ul>
+                  </li>
               {% endif %}
               <li><a href="{% url 'contact' %}">İletişim</a></li>
           </ul>
@@ -79,6 +91,9 @@
 
     </div><!-- /.container -->
 
+    {% block modals %}
+
+    {% endblock %}
 
 
     <!-- Bootstrap core JavaScript
