Seroloji duzeltildi - diger istekler gerceklestirildi

--- a/hasta/templates/hasta/add_hasta.html
+++ b/hasta/templates/hasta/add_hasta.html
@@ -18,7 +18,7 @@
                 {% crispy hastaForm %}
             </div>
             <div class="row">
-                <h3>Mevcut kateter bilgileri</h3>
+                <h3>Kateter / Fistül bilgileri</h3>
                 {% crispy kateterOlayiForm %}
             </div>
         </form>
