--- a/hasta/templates/hasta/create_olay.html
+++ b/hasta/templates/hasta/create_olay.html
@@ -7,9 +7,16 @@
 {% endblock %}
 
 {% block content %}
-    <div class="alert alert-info" role="alert">
-        Burada girdiğiniz bilgileri sonradan değiştirebilirsiniz.
-    </div>
+    {% if form.errors %}
+        <div class="alert alert-danger" role="alert">
+            <strong>Kaydedilemedi.</strong> Lütfen hataları düzeltin.
+        </div>
+    {% else %}
+        <div class="alert alert-info" role="alert">
+             Burada girdiğiniz bilgileri sonradan değiştirebilirsiniz.
+        </div>
+    {% endif %}
+
 
     <div class="row">
         <div class="col-md-12">
