--- a/home/templates/home/home.html
+++ b/home/templates/home/home.html
@@ -6,7 +6,22 @@
     <div class="row">
 
         <div class="col-sm-12 col-md-3 col-md-push-9">
-        {% if not user.is_authenticated %}
+        {% if user.is_authenticated %}
+            {% if eksik_aylik_veri.exists %}
+                <div class="panel panel-warning">
+                  <div class="panel-heading">Aylık veri girişi</div>
+                    <div class="panel-body">
+                        <p>Aşağıdaki ay(lar) için veri girişi yapmadınız.</p>
+                        <ul>
+                            {% for eksik in eksik_aylik_veri %}
+                                <li>{{ eksik.verbose_ay }} {{ eksik.yil }}</li>
+                            {% endfor %}
+                        </ul>
+                        <p>Şimdi girmek için <a href="{% url 'aylik_veri' %}">tıklayın</a>.</p>
+                    </div>
+                </div>
+            {% endif %}
+        {% else %}
             <div class="panel panel-default">
               <div class="panel-heading">Lütfen oturum açın</div>
                 <div class="panel-body">
