--- a/hasta/templates/hasta/hasta_list.html
+++ b/hasta/templates/hasta/hasta_list.html
@@ -15,14 +15,14 @@
 {% endblock %}
 
 {% block content %}
-    <h2>Merkezinize kayıtlı hastalar</h2>
+    <h2>{% if merkez_column %}Tüm{% else %}Merkezinize kayıtlı{% endif %} hastalar</h2>
 
     <table id="hastalar" class="table table-striped table-bordered" cellspacing="0">
         <thead>
             <tr>
                 <th>Ad</th>
                 <th>Soyad</th>
-                <th>TC.K. No</th>
+                <th>Dosya No</th>
                 {% if merkez_column %}
                     <th>Merkez</th>
                 {% endif %}
