Duyurulardan tarih çıkarıldı

--- a/home/templates/home/home.html
+++ b/home/templates/home/home.html
@@ -51,13 +51,13 @@
             <h2 class="text-center">TÜRKİYE’DE HEMODİYALİZ İLİŞKİLİ ENFEKSİYONLARIN SÜRVEYANSI</h2>
             <br>
             {% if user.is_authenticated %}
-                <h3>Gözlem çalışması... <span class="label label-primary">22 Haziran 2016</span></h3>
+                <h3>Gözlem çalışması... </h3>
                 
                 <p>Gözlem çalışması ile ilgili web sitesindeki bölüm aktif durumdadır. Menüden ulaşıp verilerinizi girebilirsiniz.</p>
                 
                 <p>İyi çalışmalar…</p>
                 
-                <h3>Web sitesinin kullanımı hakkında… <span class="label label-primary">1 Nisan 2016</span></h3>
+                <h3>Web sitesinin kullanımı hakkında… </h3>
 
                 <p>Öncelikle hemodiyaliz ünitesinde diyalize giren tüm hastaları sisteme kaydetmeniz gerekmektedir.
                 Kullanım kolaylığı açısından girilecek bilgileri içeren formlara sayfanızın üst kısmından ulaşabilirsiniz.</p>
